# cicd_test

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: blank.yml
include/: tmesh.h  vk_interface.h  vk_struct.h  vk_utils.h
shaders/: frag.grid.spv  frag.spv  grid.frag  grid.vert  shader.frag  shader.vert  shader.vert.bak  vert.grid.spv  vert.spv
src/: tmesh.cpp  vk_interface.cpp  vk_interface.cpp.bak  vk_struct.cpp  vk_utils.cpp
